# moodle-mcp-server

./: .gitignore  README.md  RUNNING.md  pyproject.toml
src/moodle_mcp_server/: __init__.py  main.py  middleware.py  models.py  tools.py  utils.py
